--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,12 @@ on:
     branches: [ master, main ]
 
 jobs:
-  test:
+  rubocop:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        ruby-version: ['2.7', '3.0', '3.1', '3.2']
+        ruby-version: ['3.2']
 
     steps:
     - uses: actions/checkout@v4
@@ -29,8 +29,24 @@ jobs:
     - name: Run RuboCop
       run: bundle exec rubocop
 
+  rspec:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        ruby-version: ['3.2']
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Ruby ${{ matrix.ruby-version }}
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: ${{ matrix.ruby-version }}
+        bundler-cache: true
+
+    - name: Install dependencies
+      run: bundle install
+
     - name: Run RSpec tests
       run: bundle exec rspec
-
-    - name: Run default task (spec + rubocop)
-      run: bundle exec rake
